--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,7 @@
-
-\.deps/AOloopControl_perfTest\.Plo
-
-\.libs/AOloopControl_perfTest\.o
-
-\.libs/libaoloopcontrolperftest\.a
-
-\.libs/libaoloopcontrolperftest\.la
-
-\.libs/libaoloopcontrolperftest\.lai
-
-\.libs/libaoloopcontrolperftest\.so
-
-\.libs/libaoloopcontrolperftest\.so\.0
-
-\.libs/libaoloopcontrolperftest\.so\.0\.0\.0
-
-AOloopControl_perfTest\.lo
-
-AOloopControl_perfTest\.o
-
-libaoloopcontrolperftest\.la
-
+.deps/
+.libs/
+*.lo
+*.o
 Makefile
-
-Makefile\.in
+Makefile.in
+*.la
