--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,19 @@
-project(lib_AOloopControl_perfTest_project)
+set(LIBNAME "cacaoAOloopControlperfTest")
+set(SRCNAME "AOloopControl_perfTest")
+
+
+project(lib_${LIBNAME}_project)
 
 include_directories ("${PROJECT_SOURCE_DIR}/src")
 include_directories ("${PROJECT_SOURCE_DIR}/..")
-add_library(AOloopControl_perfTest SHARED AOloopControl_perfTest.c AOloopControl_perfTest.h AOloopControl_perfTest_DM.c  AOloopControl_perfTest_status.c AOloopControl_perfTest_LinSim.c)
+add_library(${LIBNAME} SHARED 
+${SRCNAME}.c 
+${SRCNAME}.h 
+AOloopControl_perfTest_DM.c  
+AOloopControl_perfTest_status.c 
+AOloopControl_perfTest_LinSim.c
+)
 
-install(TARGETS AOloopControl_perfTest DESTINATION lib)
-install(FILES AOloopControl_perfTest.h DESTINATION include)
+install(TARGETS ${LIBNAME} DESTINATION lib)
+install(FILES ${SRCNAME}.h DESTINATION include/${SRCNAME})
 
